src/objects/Application_Answer__c.object
<CustomObject>
    <description>Captures applicants responses to questions in the expression of interest form</description>
    <fields>
        <fullName>Application_Question__c</fullName>
        <label>Application Question</label>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipLabel>Application Answer</relationshipLabel>
        <relationshipName>Application_Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Answer</relationshipLabel>
        <relationshipName>Application_Answer_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkboxes_Answer__c</fullName>
        <label>Checkboxes Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency_Answer__c</fullName>
        <defaultValue>null</defaultValue>
        <label>Currency Answer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Answer__c</fullName>
        <label>Date Answer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Day_Answer__c</fullName>
        <label>Date Day Answer</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Month_Answer__c</fullName>
        <label>Date Month Answer</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Year_Answer__c</fullName>
        <label>Date Year Answer</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Answer__c</fullName>
        <label>Email Answer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Notes about an applicants response</description>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marked_as_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked as Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Picklist_Answers__c</fullName>
        <label>Multi-Picklist Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Answer__c</fullName>
        <defaultValue>null</defaultValue>
        <label>Percent Answer</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Picklist_Answer__c</fullName>
        <label>Picklist Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Application_Question__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radio_Answer__c</fullName>
        <label>Radio Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <formula>IF(INCLUDES(Application_Question__r.Question_Type__c, &quot;Single&quot;),
IF(Checkbox_Answer__c = TRUE, &quot;True&quot;, &quot;False&quot;),
&quot;&quot;)&amp;
Checkboxes_Answer__c &amp;
TEXT(Date_Answer__c) &amp;
Email_Answer__c &amp;
Multi_Picklist_Answers__c &amp;
Picklist_Answer__c &amp;
Short_Text_Answer__c &amp;
Radio_Answer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Text_Answer__c</fullName>
        <label>Short Text Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Answer__c</fullName>
        <label>Text Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Answer</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Application Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_add_Answers_to_Submitted_App</fullName>
        <active>true</active>
        <description>You cannot add answers to applications which have been submitted</description>
        <errorConditionFormula>AND(ISPICKVAL(Application__r.Status__c, &quot;Submitted&quot;),
$User.ProfileId = &quot;00e25000000MAf9&quot; 
)</errorConditionFormula>
        <errorMessage>You cannot add answers to applications which have been submitted</errorMessage>
    </validationRules>
</CustomObject>